preventing whitespace in contact form

--- a/src/app/contact/contact-form/contact-form.component.scss
+++ b/src/app/contact/contact-form/contact-form.component.scss
@@ -11,10 +11,12 @@
 }
 
 .form-control-email{
-  width: 60%;
+  width: 80%;
 }
 
 .contact-form-image{
+  min-height: 20rem;
+  margin-bottom: 1rem;
   background-image: url(../../../assets/contact-form-image.jpg);
   background-position: center center;
   background-size: cover;
